syntax = "proto3";

package kvetch.api.v1;

option csharp_namespace = "Kvetch.Api.V1";
option go_package = "apiv1";
option java_multiple_files = true;
option java_outer_classname = "KeyValueProto";
option java_package = "com.kvetch.api.v1";
option objc_class_prefix = "KAX";

// KeyValue is a key value object.
message KeyValue {
  string key = 1;
  bytes value = 2;
}
